chore: bug fix, wrong font sizing for my title

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 	min-height: 40px;
 	padding: 10px;
 	text-align: center;
+	font-size: 30px;
 }
 
 .footer {
